--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ datasources.default.dialect=MYSQL
 micronaut.application.name=taskWeekOne
 jpa.default.properties.hibernate.hbm2ddl.auto=update
 datasources.default.driver-class-name=com.mysql.cj.jdbc.Driver
+# JDBC connection
+datasources.default.url=jdbc:mysql://localhost:3306/my_database?createDatabaseIfNotExist=true
+datasources.default.driverClassName=com.mysql.cj.jdbc.Driver
+datasources.default.username=root
+datasources.default.password=root
+
