--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id("io.micronaut.application") version "4.5.4"
     id("com.gradleup.shadow") version "8.3.7"
     id("io.micronaut.aot") version "4.5.4"
+    id "org.sonarqube" version "6.3.1.5724"
+    id "jacoco"
 }
 
 version = "0.1"
@@ -24,6 +26,7 @@ dependencies {
     compileOnly("org.projectlombok:lombok")
     runtimeOnly("ch.qos.logback:logback-classic")
     runtimeOnly("com.mysql:mysql-connector-j")
+    
 }
 
 
@@ -62,6 +65,36 @@ micronaut {
 
 tasks.named("dockerfileNative") {
     jdkVersion = "21"
+}
+jacoco {
+    toolVersion = "0.8.12"   // latest as of 2025
+}
+
+test {
+    useJUnitPlatform()       // if using JUnit 5
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+        html.required = true
+    }
+}
+def jacocoReport = "${layout.buildDirectory.get().asFile}/reports/jacoco/test/jacocoTestReport.xml"
+sonar {
+    properties {
+        property "sonar.projectKey", "TaskWeekOne"
+        property "sonar.projectName", "TaskWeekOne"
+        property "sonar.host.url", "http://localhost:9000"
+        property "sonar.token", "sqp_f3ebb20fa0b4db01552214f19afcb4093fe52ded"
+
+        // Point SonarQube to JaCoCo XML report
+        property "sonar.java.coveragePlugin", "jacoco"
+        property "sonar.coverage.jacoco.xmlReportPaths", jacocoReport
+
+    }
 }
 
 
