--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,9 @@ datasources.default.url=jdbc:mysql://localhost:3306/my_database?createDatabaseIf
 datasources.default.driverClassName=com.mysql.cj.jdbc.Driver
 datasources.default.username=root
 datasources.default.password=root
+# Kafka bootstrap server
+kafka.bootstrap.servers=localhost:29092
+kafka.reconnect.backoff.ms=30000
+kafka.retry.backoff.ms=32000
+auto.create.topics.enable=true
 
