--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,6 @@ kafka.bootstrap.servers=localhost:29092
 kafka.reconnect.backoff.ms=30000
 kafka.retry.backoff.ms=32000
 auto.create.topics.enable=true
+micronaut.jms.activemq.classic.connection-string=tcp://localhost:61616
+micronaut.jms.activemq.classic.enabled=true
 
