--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,15 @@ micronaut.application.name=taskWeekOne
 jpa.default.properties.hibernate.hbm2ddl.auto=update
 datasources.default.driver-class-name=com.mysql.cj.jdbc.Driver
 # JDBC connection
-datasources.default.url=jdbc:mysql://localhost:3306/my_database?createDatabaseIfNotExist=true
+datasources.default.url=jdbc:mysql://mysql:3306/my_database?createDatabaseIfNotExist=true
 datasources.default.driverClassName=com.mysql.cj.jdbc.Driver
 datasources.default.username=root
 datasources.default.password=root
 # Kafka bootstrap server
-kafka.bootstrap.servers=localhost:29092
+kafka.bootstrap.servers=kafka:9092
 kafka.reconnect.backoff.ms=30000
 kafka.retry.backoff.ms=32000
 auto.create.topics.enable=true
-micronaut.jms.activemq.classic.connection-string=tcp://localhost:61616
+micronaut.jms.activemq.classic.connection-string=tcp://activemq:61616
 micronaut.jms.activemq.classic.enabled=true
 
