--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,2 +1,3 @@
 #Thu Sep 11 08:16:09 UTC 2025
 jpa.default.properties.hibernate.hbm2ddl.auto=create-drop
+kafka.bootstrap.servers=${KAFKA_BOOTSTRAP}
